--- a/week-8/day-5/tictactoe2/index.html
+++ b/week-8/day-5/tictactoe2/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="choose">
         <form>
-            choose <button type="submit" style="color: #c2730a; text-decoration: none;" id="x">X</button> or <button style="color: #c2730a; text-decoration: none;" id="o">O</button>
+            choose <button type="submit" style="color: black; text-decoration: none;" id="x">X</button> or <button style="color: black; text-decoration: none;" id="o">O</button>
         </form>
     </div>
     <div id="wrap">
