--- a/week-9/day-4/daily-challenge/index.html
+++ b/week-9/day-4/daily-challenge/index.html
@@ -25,6 +25,7 @@
                 <button type="submit" id="btn">CONVERT</button>
             </div>
         </form>
+        <h1 id="result"></h1>
     </div>
 </div>
 <script src="script.js"></script>
